--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,8 @@
         "import/no-extraneous-dependencies": 0,
         "no-console": 0,
         "linebreak-style": 0,
-        "no-underscore-dangle": 0
+        "no-underscore-dangle": 0,
+        "no-shadow": 0,
+        "import/extensions": 0
     }
 }
