--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "start-dev": "webpack-dev-server --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --config webpack.prod.js",
+    "start": "nodemon ./src/scripts/web-server/server",
+    "lint": "eslint ./src"
   },
   "author": "",
   "license": "ISC",
@@ -20,14 +22,18 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "html-webpack-plugin": "^5.5.0",
+    "nodemon": "^2.0.16",
     "style-loader": "^3.3.1",
     "webpack": "^5.72.1",
-    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.0",
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@hapi/hapi": "^20.2.2",
+    "fs": "^0.0.1-security",
+    "mysql": "^2.18.1",
+    "nanoid": "^3.3.4",
     "regenerator-runtime": "^0.13.9"
   }
 }
