--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,8 @@
         "linebreak-style": 0,
         "no-underscore-dangle": 0,
         "no-shadow": 0,
-        "import/extensions": 0
+        "import/extensions": 0,
+        "no-use-before-define": 0,
+        "no-alert": 0
     }
 }
