--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@hapi/hapi": "^20.2.2",
+    "crypto-js": "^4.1.1",
     "fs": "^0.0.1-security",
     "mysql": "^2.18.1",
     "nanoid": "^3.3.4",
