--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,8 @@
         "no-underscore-dangle": 0,
         "no-shadow": 0,
         "no-alert": 0,
-        "radix": 0
+        "radix": 0,
+        "no-undef": 0,
+        "no-use-before-define": 0
     }
 }
