--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "fs": "^0.0.1-security",
     "mysql": "^2.18.1",
     "nanoid": "^3.3.4",
-    "regenerator-runtime": "^0.13.9"
+    "popups": "^1.1.3",
+    "regenerator-runtime": "^0.13.9",
+    "sweetalert": "^2.1.2"
   }
 }
