--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@hapi/hapi": "^20.2.2",
     "crypto-js": "^4.1.1",
     "fs": "^0.0.1-security",
+    "lazysizes": "^5.3.2",
     "mysql": "^2.18.1",
     "nanoid": "^3.3.4",
     "popups": "^1.1.3",
